--- a/SecondWork/WorkService/WorkService.csproj
+++ b/SecondWork/WorkService/WorkService.csproj
@@ -43,6 +43,7 @@
     <Compile Include="BasicService.cs" />
     <Compile Include="IService\IBasicService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ShowExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\WorkModel\WorkModel.csproj">
